p2/confs/app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one-svc
spec:
  selector:
    app: app-one
  ports:
  - name: app-one-port
    protocol: TCP
    port: 80
    targetPort: http-web-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one-deployment
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: paulbouwer/hello-kubernetes:1.10
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-web-port
        resources:
          requests:
            memory: "150Mi"
            cpu: "200m"
          limits:
            memory: "300Mi"
            cpu: "500m"
