p2/confs/app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two
  ports:
    - name: app-two-port
      protocol: TCP
      port: 80
      targetPort: http-web-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
        - name: app-two
          image: paulbouwer/hello-kubernetes:1.10
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http-web-port
          resources:
            requests:
              memory: "150Mi"
              cpu: "200m"
            limits:
              memory: "300Mi"
              cpu: "500m"
