p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-one
                port:
                  name: app-one-port
    - host: app2.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-two
                port:
                  name: app-two-port
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: app-three
                port:
                  name: app-three-port
